codegen/c/src/snapshots/transmute_codegen_c__tests__array_if.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
// Begin program code

#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Generated struct declarations


// Generated struct definitions


// Generated function declarations
void _TM0_F1f0(void *parent_frame);

// Generated function frames
typedef struct {
  void *parent;
  union {
    void *pointers[6];
    struct {
      int64_t n_20;
      int64_t *e11;
      int64_t *e4;
      int64_t *e9;
      int64_t e12;
    };
  };
} _TM0_F1f0__frame;

// Generated function declarations
void _TM0_F1f0(void *parent_frame)
{
  // prelude
  _TM0_F1f0__frame me = (_TM0_F1f0__frame){0};
  me.parent = parent_frame;

  if (true) {
    me.e4 = malloc(3 * sizeof(int64_t));
    me.e4[0] = 0;
    me.e4[1] = 2;
    me.e4[2] = 4;
    
    me.e11 = me.e4;
  }
  else {
    me.e9 = malloc(3 * sizeof(int64_t));
    me.e9[0] = 1;
    me.e9[1] = 3;
    me.e9[2] = 5;
    
    me.e11 = me.e9;
  }
  me.e12 = 0;
  tmc_check_array_index(me.e12, 3, 7, 15);
  me.n_20 = me.e11[me.e12];
  return;
}

// End program code
