codegen/c/src/snapshots/transmute_codegen_c__tests__array_nested_access_inline.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
// Begin program code

#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Generated struct declarations


// Generated struct definitions


// Generated function declarations
void _TM0_F1f0(void *parent_frame);

// Generated function frames
typedef struct {
  void *parent;
  union {
    void *pointers[7];
    struct {
      int64_t n_20;
      int64_t **e6;
      int64_t *e2;
      int64_t *e5;
      int64_t e7;
      int64_t e9;
    };
  };
} _TM0_F1f0__frame;

// Generated function declarations
void _TM0_F1f0(void *parent_frame)
{
  // prelude
  _TM0_F1f0__frame me = (_TM0_F1f0__frame){0};
  me.parent = parent_frame;

  me.e2 = malloc(2 * sizeof(int64_t));
  me.e2[0] = 0;
  me.e2[1] = 1;
  
  me.e2;
  me.e5 = malloc(2 * sizeof(int64_t));
  me.e5[0] = 10;
  me.e5[1] = 11;
  
  me.e5;
  me.e6 = malloc(2 * sizeof(int64_t *));
  me.e6[0] = me.e2;
  me.e6[1] = me.e5;
  
  me.e6;
  me.e7 = 0;
  tmc_check_array_index(me.e7, 2, 6, 15);
  me.e9 = 0;
  tmc_check_array_index(me.e9, 2, 6, 18);
  me.n_20 = me.e6[me.e7][me.e9];
  return;
}

// End program code
