codegen/c/src/snapshots/transmute_codegen_c__tests__array_of_structs.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
// Begin program code

#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Generated struct declarations
typedef struct s5Point s5Point;

// Generated struct definitions
struct s5Point {
  int64_t x;
  int64_t y;
};

// Generated function declarations
void _TM0_F1f0(void *parent_frame);

// Generated function frames
typedef struct {
  void *parent;
  union {
    void *pointers[4];
    struct {
      s5Point *e2;
      s5Point *e5;
      s5Point **e6;
    };
  };
} _TM0_F1f0__frame;

// Generated function declarations
void _TM0_F1f0(void *parent_frame)
{
  // prelude
  _TM0_F1f0__frame me = (_TM0_F1f0__frame){0};
  me.parent = parent_frame;

  {
    me.e2 = malloc(sizeof(s5Point));
    me.e2->x = 1;
    me.e2->y = 2;
    
    me.e2;
    me.e5 = malloc(sizeof(s5Point));
    me.e5->x = 10;
    me.e5->y = 20;
    
    me.e5;
    me.e6 = malloc(2 * sizeof(s5Point *));
    me.e6[0] = me.e2;
    me.e6[1] = me.e5;
    
    me.e6;
    return;
  }
}

// End program code
